# rustmd-viewer-for-llm

./: .gbs.conf  .gitignore  CMakeLists.txt  Cargo.toml
.cargo/: config.toml
packaging/: mdtoview.desktop  mdtoview.spec
src/: app.rs  main.rs  mdformator.rs
src/llm/: capabilities.rs  client.rs  mod.rs
src/ui/: editor.rs  llm_panel.rs  mod.rs  preview.rs
tests/: stress_test.md
